--- a/srcs/frontend/templates/tran_app/index.html
+++ b/srcs/frontend/templates/tran_app/index.html
@@ -1,3 +1,27 @@
 {% load static %}
-<script src="{% static 'js/main.js' %}"></script>
-<h1>hello world from tran_app!</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<!-- head: contient les metadonnes, le titre sur l'onglet,
+	les liens vers des fichiers externe (comme js, css, etc) -->
+	<head>
+		<!-- CSS de Bootstrap -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<!-- JavaScript de Bootstrap -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+		<!-- les metadonnes sont ecrites ici a l'aide de la balises meta
+		elles servent principalement pour les moteurs de recherche,
+		pour facilites l'adaptation de la page -->
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- titre present sur l'onglet -->
+		<title>PONG</title>
+
+	</head>
+	<body>
+		<div id="dynamicPage">
+			<script src="{% static 'js/index.js' %}" type="module"></script>
+		</div>
+	</body>
+</html>
