--- a/srcs/frontend/tran_app/component/header.html
+++ b/srcs/frontend/tran_app/component/header.html
@@ -13,7 +13,7 @@
                     <a class="nav-link active" aria-current="page" href="#" id="homeLink">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="gameLink">Game</a>
+                    <a class="nav-link pong-btn" href="#" id="gameLink">Game</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
