--- a/srcs/frontend/templates/tran_app/index.html
+++ b/srcs/frontend/templates/tran_app/index.html
@@ -1,16 +1,59 @@
-{% extends 'tran_app/component/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<!-- CSS de Bootstrap -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="icon" type="image/png" href="static/img/logo.png">
 
-{% load static %}
-
-{% block title %}
-<title>PONG / Home</title>
-{% endblock %}
-
-{% block main %}
-<div id="dynamicPage"></div>
-{% endblock %}
-
-{% block javascript %}
-{# <script src="{% static 'js/index.js' %}" type="module"></script> #}
-<script src="{% static 'js/rooter.js' %}" type="module"></script>
-{% endblock %}
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>PONG</title>
+	</head>
+	<body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-secondary fixed-top w-100">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="static/img/logo.png" alt="Bootstrap" width="110" height="25">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/" data-path="/" id="homeLink">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pong-btn" href="/pong" data-path="/pong" id="gameLink">Game</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    More
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">ScoreBoard</a></li>
+                                    <li><a class="dropdown-item" href="#">pouet</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">pouetpouet</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div id="dynamicPage">
+            </div>
+        </main>
+        <footer class="bg-secondary text-black text-center py-3 fixed-bottom">
+            &copy; 2025 PongSite - All Rights Reserved
+        </footer>
+	</body>
+    <!-- JavaScript de Bootstrap -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="static/js/router.js" type="module"></script>
+</html>
