--- a/srcs/frontend/templates/index.html
+++ b/srcs/frontend/templates/index.html
@@ -12,34 +12,34 @@
 		<title>PONG</title>
 	</head>
 	<body>
+        <div class="mobile-menu-overlay"></div>
         <header>
-            <nav class="navbar navbar-expand-lg bg-secondary fixed-top w-100">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="static/img/logo.png" alt="Bootstrap" width="110" height="25">
+                    <!-- Left side: Brand/Logo -->
+                    <a class="navbar-brand" href="/" data-path="/">
+                        <img src="static/img/logo.png" alt="Logo" width="100" height="40">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/" data-path="/" id="homeLink">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link pong-btn" href="/pong" data-path="/pong" id="gameLink">Game</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    More
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">ScoreBoard</a></li>
-                                    <li><a class="dropdown-item" href="#">pouet</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">pouetpouet</a></li>
-                                </ul>
-                            </li>
+
+                    <!-- Right side: Profile dropdown -->
+                    <div class="dropdown">
+                        <img src="static/img/anonymous.webp"
+                             class="rounded-circle"
+                             alt="Profile"
+                             width="80"
+                             height="80"
+                             style="cursor: pointer"
+                             data-bs-toggle="dropdown"
+                             aria-expanded="false">
+
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="/login" data-path="/login">Login</a></li>
+                            <li><a class="dropdown-item" href="/register" data-path="/register">Register</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/profile" data-path="/profile">Mypage</a></li>
+                            <li><a class="dropdown-item" href="/settings" data-path="/settings">Settings</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/logout" data-path="/logout">Logout</a></li>
                         </ul>
                     </div>
                 </div>
@@ -49,9 +49,10 @@
             <div id="dynamicPage">
             </div>
         </main>
-        <footer class="bg-secondary text-black text-center py-3 fixed-bottom">
-            &copy; 2025 PongSite - All Rights Reserved
-        </footer>
+        <!-- Profile menu trigger -->
+
+        <!-- Overlay -->
+        <div class="profile-overlay"></div>
 	</body>
     <!-- JavaScript de Bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
