--- a/srcs/frontend/static/css/style.css
+++ b/srcs/frontend/static/css/style.css
@@ -4,19 +4,29 @@ body {
     background-color: #D3D3D333;
 }
 
-/* Add padding-top to main content to prevent overlap with fixed header */
-/* main {
-    padding-top: 60px;
-    padding-bottom: 60px;
-} */
-
 /* Center content styles */
 .home-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 120px); /* Subtract header and footer height */
-    padding: 20px;
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 96px);
+}
+#ballAnimation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.text-center {
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 }
 
 /* Play button styles */
