--- a/srcs/frontend/static/css/style.css
+++ b/srcs/frontend/static/css/style.css
@@ -22,6 +22,21 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
+/* Animation class */
+.float {
+    animation: float 2s ease-in-out infinite;
+}
+@keyframes float {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
 
 .text-center {
     position: absolute;
