--- a/srcs/frontend/templates/index.html
+++ b/srcs/frontend/templates/index.html
@@ -14,11 +14,11 @@
 	<body>
         <div class="mobile-menu-overlay"></div>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
                 <div class="container-fluid">
                     <!-- Left side: Brand/Logo -->
                     <a class="navbar-brand" href="/" data-path="/">
-                        <img src="static/img/logo.png" alt="Logo" width="100" height="40">
+                        <img src="static/img/logo.png" alt="Logo" width="80" height="40">
                     </a>
 
                     <!-- Right side: Profile dropdown -->
@@ -26,8 +26,8 @@
                         <img src="static/img/anonymous.webp"
                              class="rounded-circle"
                              alt="Profile"
-                             width="80"
-                             height="80"
+                             width="40"
+                             height="40"
                              style="cursor: pointer"
                              data-bs-toggle="dropdown"
                              aria-expanded="false">
@@ -50,7 +50,9 @@
             </div>
         </main>
         <!-- Profile menu trigger -->
-
+        <footer class="bg-secondary text-black text-center py-3">
+            &copy; 2025 PongSite - All Rights Reserved
+        </footer>
         <!-- Overlay -->
         <div class="profile-overlay"></div>
 	</body>
