--- a/srcs/frontend/templates/index.html
+++ b/srcs/frontend/templates/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<!-- CSS de Bootstrap -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="static/css/style.css">
-        <link rel="icon" type="image/png" href="static/img/logo.png">
+        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="icon" type="image/png" href="/static/img/logo.png">
 
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,7 +18,7 @@
                 <div class="container-fluid">
                     <!-- Left side: Brand/Logo -->
                     <a class="navbar-brand" href="/" data-path="/">
-                        <img src="static/img/logo.png" alt="Logo" width="80" height="40">
+                        <img src="/static/img/logo.png" alt="Logo" width="80" height="40">
                     </a>
 
                     <!-- Right side: Profile dropdown -->
@@ -58,5 +58,5 @@
 	</body>
     <!-- JavaScript de Bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="static/js/router.js" type="module"></script>
+    <script src="/static/js/router.js" type="module"></script>
 </html>
