--- a/srcs/frontend/static/css/style.css
+++ b/srcs/frontend/static/css/style.css
@@ -1,7 +1,31 @@
 body {
-    min-height: 100vh;
     margin: 0;
-    background-color: #D3D3D333;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+}
+
+main {
+    flex: 1;
+    overflow: hidden;
+}
+
+.game-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+	padding: 2rem;
+}
+
+#pongGame {
+    display: block;
+    margin: 0;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Center content styles */
