add tournament style

--- a/srcs/frontend/templates/index.html
+++ b/srcs/frontend/templates/index.html
@@ -23,7 +23,7 @@
 
                     <!-- Right side: Profile dropdown -->
                     <div class="dropdown">
-                        <img src="static/img/anonymous.webp"
+                        <img src="/static/img/anonymous.webp"
                              class="rounded-circle"
                              alt="Profile"
                              width="40"
