--- a/srcs/frontend/static/css/style.css
+++ b/srcs/frontend/static/css/style.css
@@ -2176,3 +2176,91 @@ body.dark-mode {
     overflow-y: auto;
     padding: 0 10px;
 }
+
+.pong-loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+.pong-loader-container {
+    width: 300px;
+    height: 150px;
+    position: relative;
+    perspective: 1000px;
+    text-align: center;
+}
+
+.typewriter-text {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    color: #111;
+    font-family: 'Courier New', monospace;
+    font-size: 1.5rem;
+    overflow: hidden;
+    white-space: nowrap;
+    animation: typing 5s steps(40) infinite;
+}
+
+.typewriter-text::after {
+    content: '|';
+    position: absolute;
+    right: -4px;
+    animation: blink 0.75s step-end infinite;
+}
+
+@keyframes typing {
+    0% {
+        width: 0;
+    }
+    20% {
+        width: 50%;
+    }
+	80% {
+        width: 50%;
+    }
+    100% {
+        width: 0;
+    }
+}
+
+@keyframes blink {
+    from, to { opacity: 1; }
+    50% { opacity: 0; }
+}
+
+.back-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+	transform: translate(-50%, -50%);
+    padding: 10px 20px;
+	margin-top: 10rem;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+    z-index: 100;
+}
+
+.back-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.back-button i {
+    font-size: 1.2rem;
+}
