--- a/srcs/frontend/templates/index.html
+++ b/srcs/frontend/templates/index.html
@@ -19,7 +19,7 @@
 			</div>
 		</main>
 		<!-- Profile menu trigger -->
-		<footer class="bg-secondary text-black text-center py-3">
+		<footer class="bg-secondary text-black text-center py-3" data-translate="2025 PongSite - All Rights Reserved">
 			&copy; 2025 PongSite - All Rights Reserved
 		</footer>
 		<!-- Overlay -->
@@ -27,5 +27,6 @@
 	</body>
 	<!-- JavaScript de Bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	<script src="/static/js/utils/translate.js"></script>
 	<script src="/static/js/router.js" type="module"></script>
 </html>
