translate modal in profile page

--- a/srcs/frontend/static/css/style.css
+++ b/srcs/frontend/static/css/style.css
@@ -2153,6 +2153,29 @@ body.dark-mode {
     color: #495057;
 }
 
+.all-friends-modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+}
+
+.all-friends-modal .modal-content {
+	background: white;
+	border-radius: 8px;
+	padding: 20px;
+	position: relative;
+	width: 90%;
+	max-width: 800px;
+	overflow-y: auto;
+}
+
 .match-history-modal {
     position: fixed;
     top: 0;
