--- a/srcs/frontend/static/css/style.css
+++ b/srcs/frontend/static/css/style.css
@@ -713,7 +713,7 @@ main {
 	font-weight: 600;
 	padding: 4px 12px;
 	border-radius: 20px;
-	font-size: 0.9em;
+	font-size: 0.8em;
 	text-transform: uppercase;
 }
 
@@ -2325,3 +2325,25 @@ body.dark-mode {
 	from { opacity: 1; }
 	to { opacity: 0; }
 }
+
+.stats-summary {
+	margin-top: 10px; 
+	text-align: center; 
+	font-size: 0.8em; 
+	font-weight: bold;  
+	/* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between; /* Met un grand espace entre les deux textes */
+    width: 80%; /* Assure-toi que la largeur de la div est pleine */
+}
+
+.loss-text {
+    margin: 0 10px;
+	color: #e74c3c; 
+}
+.win-text{
+    margin: 0 10px; 
+	color: #2ecc71;
+}
+
+
