--- a/srcs/frontend/templates/index.html
+++ b/srcs/frontend/templates/index.html
@@ -19,7 +19,7 @@
 			</div>
 		</main>
 		<!-- Profile menu trigger -->
-		<footer class="bg-secondary text-black text-center py-3" data-translate="2025 PongSite - All Rights Reserved">
+		<footer class="bg-body-secondary text-black text-center py-3" data-translate="2025 PongSite - All Rights Reserved">
 			&copy; 2025 PongSite - All Rights Reserved
 		</footer>
 		<!-- Overlay -->
